Bug 53339 - LO 3.6 crashes when saving complex ods as xls
Summary: LO 3.6 crashes when saving complex ods as xls
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 target:3.6.1
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-10 11:54 UTC by th
Modified: 2012-08-17 13:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ods file to be converted to xls (890.77 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-08-10 11:55 UTC, th
Details
bt + console logs (20.17 KB, text/plain)
2012-08-11 12:38 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description th 2012-08-10 11:54:15 UTC
i have a relatively complex ods file, that crashes whenever i want to save it as xls.

Steps:
open ods file
save as xls
file crashes during process, cannot be saved as xls.

I've already tried to remove some worksheets, without success
Comment 1 th 2012-08-10 11:55:15 UTC
Created attachment 65385 [details]
ods file to be converted to xls
Comment 2 Julien Nabet 2012-08-11 12:38:16 UTC
Created attachment 65427 [details]
bt + console logs

On pc Debian x86-64 with master sources updated today, I reproduced the pb.
I noticed too some warnings (more than 400 times the same one)
I put console logs, bt of the crash and the bt of the first warn.
Comment 3 Markus Mohrhard 2012-08-11 21:24:25 UTC
That is one for me. Looks like my work for cond format export to xlsx that should not be visible in xls save.
Comment 4 th 2012-08-11 21:39:33 UTC
for me also fails to convert to xlsx format...
Comment 5 Not Assigned 2012-08-14 20:57:20 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=631b6e87ca95c0e2bcb2bdc34095c5f601af3469

check for non existing style entries, fdo#53339
Comment 6 Not Assigned 2012-08-15 11:03:42 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3fefa69d6d316b9e38f12e3d3eb1fdd5896513cd&g=libreoffice-3-6

check for non existing style entries, fdo#53339


It will be available in LibreOffice 3.6.2.
Comment 7 Not Assigned 2012-08-17 06:30:34 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=49e036414fb9ff98f2c25bbe5c61ee7b9341d92c&g=libreoffice-3-6-1

check for non existing style entries, fdo#53339


It will be available already in LibreOffice 3.6.1.
Comment 8 th 2012-08-17 13:03:22 UTC
for the current LO 3.6.1 RC1 it's not yet fixed, as i've just tried; same behavior as before, LO crashes
Comment 9 Markus Mohrhard 2012-08-17 13:12:53 UTC
It will be only fixed in rc2.

But you should move your data into a new documentat at some point. This document is not correct anymore and contains some errors in the content that are invisible to the normal user but may fail different applications.

This craash here was caused by one of these problems in the document.
Comment 10 th 2012-08-17 13:17:17 UTC
ok thanks.