check for non existing style entries, fdo#53339

Change-Id: I95bbb3ad89eedebbcd45b4eefd26b46d5d8cd05f
Signed-off-by: Michael Meeks <michael.meeks@suse.com>